--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "web-cv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sercanevyapan.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
@@ -16,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "gh-pages": "^6.1.1",
     "lucide-react": "^0.300.0",
     "next": "^14.1.4",
     "react": "^18.2.0",
