--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "web-cv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sercanevyapan.github.io",
+  "homepage": "https://sercanevyapan.github.io/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
@@ -19,7 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^2.0.1",
     "lucide-react": "^0.300.0",
     "next": "^14.1.4",
     "react": "^18.2.0",
@@ -39,6 +39,6 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5"
+    "typescript": "^5.4.3"
   }
 }
