--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-cv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sercanevyapan.github.io/",
+  "homepage": "https://sercanevyapan.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
